feat(geo): add phase 1 synthetic geo iterator and SpEL geo variable
Introduce geo core module and iterator-geo for template V2 GEO sources, delegate
faker GeoKit to shared loaders/generators, and document operator usage.

AI-Assisted-by: Cursor
Co-authored-by: Gensokyo <liuweixing@pcitech.com>
Co-authored-by: Cursor <cursoragent@cursor.com>